--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,20 @@ dependencies:
   carousel_slider: ^4.2.1
   http: ^1.1.0
   custom_clippers: ^2.0.0
+  flutter_otp_text_field: ^1.1.1
+  otp_text_field: ^1.1.3
+  google_fonts: ^6.1.0
+  camera_android: ^0.10.8+13
+  provider: ^6.0.5
+  #flutter_mapbox: ^0.9.3
+  #flutter_mapbox_autocomplete: ^2.0.0
+  #flutter_mapbox_nav: ^0.1.5
+  #com.mapbox.common:common: ^23.3.2
+  #com.mapbox.mapboxsdk:mapbox-android-core: ^5.0.0
+
+# dependency_overrides:
+#   com.mapbox.common:common: '23.3.2'
+#   com.mapbox.mapboxsdk:mapbox-android-core: '5.0.0'
 
 dev_dependencies:
   flutter_test:
