--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,32 @@ dependencies:
   otp_text_field: ^1.1.3
   google_fonts: ^6.1.0
   camera_android: ^0.10.8+13
-  provider: ^6.0.5
+  provider: ^6.0.4
+  flutter_flow_chart: ^1.0.0
+  auto_size_text: 3.0.0
+  cached_network_image: 3.2.1
+  flutter_animate: 4.1.1+1
+  #flutter_cache_manager: 3.3.0
+  font_awesome_flutter: 10.1.0
+  from_css_color: 2.0.0
+  go_router: 7.1.1
+  json_path: 0.6.2
+  page_transition: 2.0.4
+  path_provider: 2.0.14
+  path_provider_android: 2.0.25
+  path_provider_foundation: 2.2.2
+  path_provider_platform_interface: 2.0.6
+  shared_preferences_android: 2.1.0
+  shared_preferences_ios: 2.1.1
+  shared_preferences_platform_interface: 2.2.0
+  shared_preferences_web: 2.1.0
+  sqflite: 2.2.6
+  timeago: 3.2.2
+  url_launcher: 6.1.10
+  url_launcher_android: 6.0.27
+  url_launcher_ios: 6.1.4
+  url_launcher_platform_interface: 2.1.2
+  #flutterflow_ui: ^0.2.0 
   #flutter_mapbox: ^0.9.3
   #flutter_mapbox_autocomplete: ^2.0.0
   #flutter_mapbox_nav: ^0.1.5
