--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  flutter_mapbox_navigation: ^0.0.26
+  flutter_mapbox_navigation: ^0.0.26 
   shared_preferences: ^2.0.13
   flutter_native_splash: ^2.0.4
   location: ^4.3.0
@@ -53,6 +53,8 @@ dependencies:
   url_launcher_android: 6.0.27
   url_launcher_ios: 6.1.4
   url_launcher_platform_interface: 2.1.2
+  firebase_core: ^2.24.2
+  firebase_messaging: ^14.7.10
   #flutterflow_ui: ^0.2.0 
   #flutter_mapbox: ^0.9.3
   #flutter_mapbox_autocomplete: ^2.0.0
