--- a/android/build.gradle
+++ b/android/build.gradle
@@ -20,8 +20,12 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
-        classpath 'com.google.gms.google-services:4.4.0'
+        // classpath 'com.google.gms.google-services:4.4.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+
+    plugins {
+        id 'com.google.gms.google-services' version '4.4.0' apply false
     }
 }
 
