--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,13 +22,13 @@ if (flutterVersionName == null) {
 }
 
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
+// apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
-plugins {
-    id 'com.google.gms.google-services'
-}
+// plugins {
+//     id 'com.google.gms.google-services'
+// }
 
 android {
     compileSdkVersion flutter.compileSdkVersion
