--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,12 +55,9 @@ dependencies:
   url_launcher_platform_interface: 2.1.2
   firebase_core: ^2.24.2
   firebase_messaging: ^14.7.10
-  #flutterflow_ui: ^0.2.0 
-  #flutter_mapbox: ^0.9.3
-  #flutter_mapbox_autocomplete: ^2.0.0
-  #flutter_mapbox_nav: ^0.1.5
-  #com.mapbox.common:common: ^23.3.2
-  #com.mapbox.mapboxsdk:mapbox-android-core: ^5.0.0
+  dotenv: ^4.2.0
+  bcrypt: ^1.1.3
+
 
 # dependency_overrides:
 #   com.mapbox.common:common: '23.3.2'
