--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   url_launcher_platform_interface: 2.1.2
   firebase_core: ^2.24.2
   firebase_messaging: ^14.7.10
+  socket_io_client: ^2.0.3+1
   #flutterflow_ui: ^0.2.0 
   #flutter_mapbox: ^0.9.3
   #flutter_mapbox_autocomplete: ^2.0.0
