--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,14 +11,14 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  flutter_mapbox_navigation: ^0.0.26 
+  # flutter_mapbox_navigation: ^0.0.26 
   shared_preferences: ^2.0.13
   flutter_native_splash: ^2.0.4
   location: ^4.3.0
   #google_fonts: ^6.1.0
   flutter_dotenv: ^5.0.2
   dio: ^4.0.4 
-  mapbox_gl: ^0.15.0
+  # mapbox_gl: ^0.15.0
   intl: ^0.17.0
   flutter_rating_bar: ^4.0.0
   carousel_slider: ^4.2.1
