--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  indexed: ^0.0.8
   cupertino_icons: ^1.0.2
   flutter_mapbox_navigation: ^0.0.26 
   shared_preferences: ^2.0.13
