--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   firebase_messaging: ^14.7.10
   dotenv: ^4.2.0
   bcrypt: ^1.1.3
+  flutter_local_notifications: ^16.3.2
 
 
 # dependency_overrides:
