--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   bcrypt: ^1.1.3
   flutter_polyline_points: ^2.0.0
   google_maps_flutter: ^2.5.3
+  flutter_carousel_slider: ^1.1.0
 
 # dependency_overrides:
 #   com.mapbox.common:common: '23.3.2'
