--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,6 +30,12 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 //     id 'com.google.gms.google-services'
 // }
 
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
+
 android {
     compileSdkVersion flutter.compileSdkVersion
 
@@ -48,7 +54,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.mapbox_turn_by_turn"
+        applicationId "com.cfiwebops.ncc_udaan"
         minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
@@ -56,17 +62,23 @@ android {
         multiDexEnabled true
     }
 
-    buildTypes {
-        debug {
-            manifestPlaceholders = [consumerAppId: "com.rsp.liftprojectsipclient"]
-        }
-        release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
-            manifestPlaceholders = [consumerAppId:"com.rsp.liftprojectsipclient"]
-        }
-    }
+    signingConfigs {
+       release {
+           keyAlias keystoreProperties['keyAlias']
+           keyPassword keystoreProperties['keyPassword']
+           storeFile file('D:/Keystore/NCCUdaankeystore.jks')
+           storePassword keystoreProperties['storePassword']
+      }
+   }
+   buildTypes {
+      release {
+         // TODO: Add your own signing config for the release build.
+         // Signing with the debug keys for now,
+         // so `flutter run --release` works.
+         signingConfig signingConfigs.debug
+         signingConfig signingConfigs.release
+      }
+   }
 }
 
 flutter {
